fix small issues in html and css files

--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@
   list-style: none;
 }
 
-body {  background-image: url('./images/background-image.png');
+body {
+  background-image: url('./images/background-image.png');
   background-size: 790px 697px;
   background-repeat: no-repeat;
   background-position: 398px 0px;
