--- a/style.css
+++ b/style.css
@@ -118,3 +118,213 @@ button {
 .btn-red {
   background-color: #e74c3c;
 }
+
+.container {
+  width: auto;
+  min-height: 477px;
+  background-color: #3A3A3A;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  padding: 85px 80px 0 85px;
+}
+
+.footer-title {
+  font-size: 28px;
+  line-height: 154%;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+  font-weight: 800;
+}
+
+.footer-description {
+  font-size: 18px;
+  line-height: 154%;
+  color: #FFFFFF;
+  font-weight: 400;
+  margin-bottom: 42px;
+}
+
+.social-links a:not(:last-child) {
+  margin-right: 30.5px;
+}
+
+.input-title {
+  display: block;
+  font-size: 24px;
+  line-height: 100%;
+  color: #FFFFFF;
+  margin-bottom: 13px;
+  text-align: center;
+}
+
+.subscribe-form {
+  width: 477px;
+  height: 61px;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.subscribe-button {
+  background-color: transparent;
+  color: #000000;
+  border-radius: 5px;
+  margin-bottom: 0;
+  font-size: 18px;
+  line-height: 100%;
+  font-weight: 500;
+  border-left: #000000 1px solid;
+  border-radius: 0px;
+  
+}
+
+#email-input {
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  padding-left: 36px;
+}
+
+.menu-title {
+  display: block;
+  font-size: 20px;
+  line-height: 100%;
+  font-weight: 500;
+  color: #FFFFFF;
+  margin-bottom: 23px;
+}
+
+.footer-menu-item {
+  margin-bottom: 17px;
+  list-style: none;
+}
+
+.footer-menu-item a {
+  color: #FFFFFF;
+  font-size: 18px;
+  line-height: 100%;
+  font-weight: 400;
+}
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 206px;
+}
+
+.footer-bottom-text {
+  font-size: 14px;
+  line-height: 100%;
+  color: #FFFFFF;
+  font-weight: 400;
+  margin-top: 33px;
+}
+
+.footer-bottom-text a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.footer-line {
+  width: 66px;
+  height: 1px;
+  background-color: #FFFFFF;
+  margin: 0 auto 15px;
+}
+
+a {
+  text-decoration: none;
+}
+
+#authBtn {
+  background-color: #3498db;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+#authBtn:hover {
+  background-color: #2980b9;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1001;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.modal-showed {
+  display: block
+}
+
+.overlay {
+
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.overlay-showed {
+  display: block
+}
+
+#loginInput {
+  padding: 10px;
+  border-radius: 8px;
+  border: solid 1px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+#passwordInput {
+  padding: 10px;
+  border-radius: 8px;
+  border: solid 1px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+#loginBtn {
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 9px;
+}
+
+#loginBtn:hover {
+  background-color: #2980b9;
+}
+
+.modal-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 22px;
+  border: none;
+  background: none;
+  cursor: pointer;
+  color: #333;
+  transition: color 0.2s ease, transform 0.2s ease;
+}
+
+.modal-close:hover {
+  color: red;
+  transform: scale(1.2);
+}
